--- a/css/githubStyles.css
+++ b/css/githubStyles.css
@@ -29,8 +29,8 @@
    justify-content: center;
    width: 350px;
    height: 233px;
-   /* background-color: rgb(14, 17, 22); */
-   background-color: #0E1116;
+   /* background-color: #0E1116; */
+   background-color: #111111;
    color: white;
    /* margin: 10px; */
    position: relative;
@@ -42,6 +42,7 @@
    flex-direction: column;
    align-items: start;
    justify-content: center;
+   min-height: 140px;
    /* flex-grow: 1; */
    /* margin-top: 10%; */
    /* padding-bottom: 40px; */
@@ -49,6 +50,7 @@
 
 .contentWrapper p, .languageText {
    color: #9198A1;
+   /* color: red; */
 }
 
 .githubDiv h3, .githubDiv p {
@@ -81,7 +83,7 @@
    border-radius: 20px;
    margin-right: 3px;
    /* margin-left: 5%; */
-   font-size: 11px;
+   font-size: 13px;
 }
 
 .lastUpdated {
