--- a/css/experienceStyles.css
+++ b/css/experienceStyles.css
@@ -1,20 +1,54 @@
 #experienceSection h1 {
    margin-bottom: 10px;
-   margin-top: 50px;
+   margin-top: 30px;
+}
+
+input[type="radio"] {
+   display: none;
 }
 
 #radioDiv {
    display: flex;
    align-items: center;
+   margin-top: 5px;
 }
 
 #radioDiv label {
+   /* margin-right: 15px; */
+   display: flex;
+   align-items: center;
+}
+
+.customRadio {
+   position: relative;
+   /* padding-left: 30px; */
+   cursor: pointer;
+   display: inline-block;
+   user-select: none;
+}
+
+.radioMark {
+   display: inline-block;
+   /* position: absolute; */
+   /* left: 0;
+   top: 2px; */
+   height: 15px;
+   width: 15px;
+   border-radius: 50%;
+   border: 1px solid #aaa;
+   background-color: white;
+   transition: all 0.2s ease;
+   margin-right: 5px;
+}
+
+#timelineRadioLabel {
    margin-right: 15px;
 }
 
-#radioDiv input {
-   margin-right: 3px;
-}
+input[type="radio"]:checked + .radioMark {
+   background-color: #FF3A0E;
+   border-color: #FF3A0E;
+ }
 
 #allExperienceContainer {
    width: 100%;
@@ -47,16 +81,13 @@
    grid-template-columns: repeat(auto-fit, minmax(0, 1fr));
    grid-auto-flow: column;
    width: 200%;
+   color: #fff9e2;
 }
 
 .eventHolder, .yearHolder {
    height: 5px;
    width: 100%;
 }
-
-/* .eventHolder {
-   background-color: darkgoldenrod;
-} */
 
 .yearHolder {
    overflow: visible;
@@ -124,10 +155,25 @@
    margin-top: 7px;
 }
 
+.workMarker {
+   background-color: #c5d2df;
+   color: #1A1A1A;
+}
+
+.eduMarker {
+   /* background-color: #f59166; */
+   /* background-color: #f59386; */
+   background-color: #C58590;
+   color: #1A1A1A;
+}
+
 .month {
    text-align: center;
    font-size: 12px;
-   background: #a8c4e2;
+   height: 20px;
+   display: flex;
+   align-items: center;
+   background: #1A1A1A;
    padding: 2px;
    overflow: visible;
    white-space: nowrap;
@@ -167,11 +213,6 @@
    flex-direction: column;
    justify-content: start;
    align-items: center;
-   /* margin-left: 30px;
-   margin-right: 30px; */
-   /* border: 1px solid black; */
-   /* border-radius: 10px; */
-   /* background-color: khaki; */
 }
 
 .experienceContainer h3 {
@@ -199,13 +240,6 @@
    margin-right: 150px;
    margin-left: -20px;
 }
-
-
-/* #educationContainer {
-   background-color: aqua;
-   height: 100%;
-   width: 40%;
-} */
 
 #expTable {
    display: grid;
