--- a/css/experienceStyles.css
+++ b/css/experienceStyles.css
@@ -263,6 +263,7 @@ input[type="radio"]:checked + .radioMark {
 .titleCell {
    margin-left: 5px;
    font-weight: bold;
+   cursor: pointer;
 }
 
 .rotateArrow {
